fixing background color and adjusting footer alignment

--- a/src/components/layout/footer.css
+++ b/src/components/layout/footer.css
@@ -31,11 +31,15 @@ footer {
     .footer-socials {
         padding-bottom: 20px;
     }
+    .footer-contents {
+        margin-left: 1rem;
+    }
 }
 
 .footer-logo {
     height: 200px;
     padding-top: 30px;
+
 }
 
 ul {
